--- a/example.wrangler.toml
+++ b/example.wrangler.toml
@@ -4,5 +4,5 @@ compatibility_date = "2024-10-03"
 
 [[d1_databases]]
 binding = "NEWSNOW_DB"
-database_name = "newsnow-db"
-database_id = ""
+database_name = "news"
+database_id = "80355c03-0e4a-4a8d-a338-a5a0941dbea7"
