--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "幻凡ss-newsnow",
   "type": "module",
-  "version": "0.0.30",
+  "version": "",
   "private": true,
   "packageManager": "pnpm@10.5.2",
   "author": {
